# kgateway

./: .goreleaser.yaml  Makefile  README.md  Tiltfile  go.mod  go.sum
.github/workflows/: docs-gen.yaml  nightly-tests.yaml  pr-kubernetes-tests.yaml  push-docs.yaml  regression-tests.yaml  release.yaml  trivy-analysis-scheduled.yaml
api/applyconfiguration/: utils.go
api/v1alpha1/: backend_config_policy_types.go  backend_types.go  doc.go  gateway_extensions_types.go  http_listener_policy_types.go  rbac.go  route_policy_types.go  traffic_policy_types.go  zz_generated.deepcopy.go
cmd/kgateway/: main.go
cmd/sds/: main.go
design/: 10553.md  10651-xds-auth.md  11161.md  11192.md  11219-xds-tls.md
docs/: global-rate-limiting.md
docs/data/: ProtoMap.yaml
examples/plugin/: main.go
examples/waypoint/: waypoint-gw.yaml
hack/kind/: setup-kind.sh
install/helm/: README.md
install/test/: grpc_json_transcoder_test.go  helm_suite_test.go  helm_test.go  k8sgateway_test.go
internal/envoyinit/: Dockerfile.envoyinit
internal/envoyinit/rustformations/: Cargo.toml
pkg/leaderelector/: election_factory.go  identity.go  identity_test.go  leader.go  leader_test.go
pkg/pluginsdk/: types.go
pkg/schemes/: extended_scheme.go  scheme.go
scale/: gw.yaml  readme.md  routes.yaml
test/aws_credentials/: ec2_test.go
test/e2e/: aggregate_listener_test.go  aws_ec2_test.go  aws_test.go  buffer_test.go  connection_limit_test.go  consul_test.go  cors_test.go  csrf_test.go  custom_auth_test.go  dns_test.go  dynamic_forward_proxy_test.go  e2e_suite_test.go  example_test.go  (+24 more)
(+563 files in other folders)
